--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -43,15 +43,11 @@
             <h1>Registration</h1>
 
             <form th:action="@{/registration}" method="post" th:object="${user}">
-                <div class="form-group">
-                    <label class="control-label" for="firstName"> First Name </label>
-                    <input id="firstName" class="form-control" th:field="*{firstName}"
-                           required autofocus="autofocus" />
-                </div>
+
 
                 <div class="form-group">
-                    <label class="control-label" for="lastName"> Last Name </label> <input
-                        id="lastName" class="form-control" th:field="*{lastName}"
+                    <label class="control-label" for="lastName">  Name </label> <input
+                        id="lastName" class="form-control" th:field="*{name}"
                         required autofocus="autofocus" />
                 </div>
 
