--- a/src/main/resources/templates/formDoctor.html
+++ b/src/main/resources/templates/formDoctor.html
@@ -10,7 +10,6 @@
     <h2 th:text="${doctor.id == null ? 'Add Doctor' : 'Edit Doctor'}"></h2>
 
     <form th:action="@{/saveDoctor}" th:object="${doctor}" method="post">
-
         <div class="form-group">
             <label for="name">Name:</label>
             <input type="text" id="name" th:field="*{user.name}" class="form-control" placeholder="Enter name" required />
@@ -31,7 +30,6 @@
             <input type="text" id="role" th:field="*{user.role}" class="form-control" value="ROLE_DOCTOR" readonly />
         </div>
 
-        <!-- Informations Doctor -->
         <div class="form-group">
             <label for="address">Address:</label>
             <input type="text" id="address" th:field="*{address}" class="form-control" placeholder="Enter address" required />
@@ -41,6 +39,7 @@
             <label for="specialty">Specialty:</label>
             <input type="text" id="specialty" th:field="*{specialty}" class="form-control" placeholder="Enter specialty" required />
         </div>
+
         <div class="form-group">
             <label for="city">City:</label>
             <input type="text" id="city" th:field="*{city}" class="form-control" placeholder="Enter city" required />
@@ -48,13 +47,11 @@
 
         <div class="form-group">
             <label for="postalCode">Postal Code:</label>
-            <input type="text" id="postalCode" th:field="*{postalCode}" class="form-control" placeholder="Enter doctor's postal code" required />
+            <input type="text" id="postalCode" th:field="*{postalCode}" class="form-control" placeholder="Enter postal code" required />
         </div>
-
 
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
-
 </div>
 </body>
 </html>
