--- a/src/main/resources/templates/formDoctor.html
+++ b/src/main/resources/templates/formDoctor.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Form Doctor</title>
+    <title th:text="${doctor.id == null ? 'Add Doctor' : 'Edit Doctor'}">Doctor Form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
 
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" th:field="*{user.password}" class="form-control" placeholder="Enter password" required />
+            <input type="password" id="password" th:field="*{user.password}" class="form-control" placeholder="Enter password" />
         </div>
 
         <div class="form-group">
