make home page and desing doctors list well done

--- a/src/main/resources/templates/EditPatients.html
+++ b/src/main/resources/templates/EditPatients.html
@@ -31,30 +31,17 @@
                         <span class="text-danger" th:errors="${patient.name}"></span>
                     </div>
 
-                    <div class="mb-3 mt-3">
-                        <label for="adresse" class="form-label">Adresse</label>
-                        <input class="form-control" type="text" name="adresse" id="adresse" placeholder="Enter address" th:value="${patient.adresse}">
-                    </div>
 
-                    <div class="mb-3 mt-3">
-                        <label for="codePostal" class="form-label">Code Postal</label>
-                        <input class="form-control" type="text" name="codePostal" id="codePostal" placeholder="Enter postal code" th:value="${patient.codePostal}">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                        <label for="ville" class="form-label">Ville</label>
-                        <input class="form-control" type="text" name="ville" id="ville" placeholder="Enter city" th:value="${patient.ville}">
-                    </div>
 
                     <div class="mb-3 mt-3">
                         <label for="telephone" class="form-label">Telephone</label>
                         <input class="form-control" type="text" name="telephone" id="telephone" placeholder="Enter phone number" th:value="${patient.telephone}">
                     </div>
 
-                    <div class="mb-3 mt-3">
-                        <label for="mail" class="form-label">Email</label>
-                        <input class="form-control" type="email" name="mail" id="mail" placeholder="Enter email" th:value="${patient.mail}">
-                    </div>
+<!--                    <div class="mb-3 mt-3">-->
+<!--                        <label for="mail" class="form-label">Email</label>-->
+<!--                        <input class="form-control" type="email" name="mail" id="mail" placeholder="Enter email" th:value="${patient.mail}">-->
+<!--                    </div>-->
 
                     <div class="mb-3 mt-3">
                         <label for="birthDate" class="form-label">Birth Date</label>
