--- a/src/main/resources/templates/formDoctor.html
+++ b/src/main/resources/templates/formDoctor.html
@@ -89,6 +89,9 @@
         .form-group:nth-child(6) { animation-delay: 0.6s; }
         .form-group:nth-child(7) { animation-delay: 0.7s; }
         .form-group:nth-child(8) { animation-delay: 0.8s; }
+        .form-group:nth-child(9) { animation-delay: 0.9s; }
+        .form-group:nth-child(10) { animation-delay: 1s }
+        .form-group:nth-child(11) { animation-delay: 1.1s; }
         /* Back button styling */
         .back-button {
             font-size: 18px;
@@ -110,11 +113,13 @@
 
     <h2 th:text="${doctor.id == null ? 'Add Doctor' : 'Edit Doctor'}"></h2>
 
-    <form th:action="@{/saveDoctor}" th:object="${doctor}" method="post">
-        <div class="form-group">
+    <form th:action="@{/saveDoctor}" th:object="${doctor}" method="post" enctype="multipart/form-data">
+
+    <div class="form-group">
             <label for="name">Name:</label>
-            <input type="text" id="name" th:field="*{user.name}" class="form-control" placeholder="Enter name" required />
+            <input type="text" id="name" th:field="*{name}" class="form-control" placeholder="Enter name" required />
         </div>
+
 
         <div class="form-group">
             <label for="email">Email:</label>
@@ -135,7 +140,10 @@
             <label for="address">Address:</label>
             <input type="text" id="address" th:field="*{address}" class="form-control" placeholder="Enter address" required />
         </div>
-
+        <div class="form-group">
+            <label for="description">Description:</label>
+            <input type="text" id="description" th:field="*{Description}" class="form-control" placeholder="Enter description" required />
+        </div>
         <div class="form-group">
             <label for="specialty">Specialty:</label>
             <input type="text" id="specialty" th:field="*{specialty}" class="form-control" placeholder="Enter specialty" required />
@@ -148,9 +156,17 @@
 
         <div class="form-group">
             <label for="postalCode">Postal Code:</label>
-            <input type="text" id="postalCode" th:field="*{postalCode}" class="form-control" placeholder="Enter postal code" required />
+            <input type="number" id="postalCode" th:field="*{postalCode}" class="form-control" placeholder="Enter postal code" required />
         </div>
 
+        <div class="form-group">
+            <label for="phone">Phone:</label>
+            <input type="number" id="phone" th:field="*{phone}" class="form-control" placeholder="Enter phone number" required />
+        </div>
+        <div> class="form-group">
+          <label for="image">Image :</label>
+          <input type="file" id="image" name="image">
+        </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
 </div>
