--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -45,11 +45,11 @@
             <form th:action="@{/registration}" method="post" th:object="${user}">
 
 
-                <div class="form-group">
-                    <label class="control-label" for="lastName">  Name </label> <input
-                        id="lastName" class="form-control" th:field="*{name}"
-                        required autofocus="autofocus" />
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label class="control-label" for="lastName">  Name </label> <input-->
+<!--                        id="lastName" class="form-control" th:field="*{name}"-->
+<!--                        required autofocus="autofocus" />-->
+<!--                </div>-->
 
                 <div class="form-group">
                     <label class="control-label" for="email"> Email </label> <input
@@ -67,15 +67,16 @@
 
                 <div class="form-group">
                     <label>Role</label><br>
-                    <!-- Bouton radio pour le rÃ´le Doctor -->
+                    <!-- Bouton radio pour le rôle Doctor -->
                     <input type="radio" id="roleDoctor" name="role" th:field="*{role}" value="ROLE_DOCTOR" required />
                     <label for="roleDoctor">Doctor</label>
-
-                    <!-- Bouton radio pour le rÃ´le Pharmacy -->
+                    <input type="radio" id="roleUser" name="role" th:field="*{role}" value="ROLE_USER" required />
+                    <label for="roleUser">User</label>
+                    <!-- Bouton radio pour le rôle Pharmacy -->
                     <input type="radio" id="rolePharmacy" name="role" th:field="*{role}" value="ROLE_PHARMACY" />
                     <label for="rolePharmacy">Pharmacy</label>
 
-                    <!-- Vous pouvez ajouter d'autres rÃ´les si nÃ©cessaire -->
+                    <!-- Vous pouvez ajouter d'autres rôles si nécessaire -->
                 </div>
 
 
