--- a/src/main/resources/templates/ConsultationPatient.html
+++ b/src/main/resources/templates/ConsultationPatient.html
@@ -127,6 +127,9 @@
                 <th>Date</th>
                 <th>Description</th>
                 <th>Prescription</th>
+                <th>Allergies</th>
+                <th>Current Treatments</th>
+                <th>Medical History</th>
             </tr>
             </thead>
             <tbody>
@@ -134,6 +137,9 @@
                 <td th:text="${consultation.date}"></td>
                 <td th:text="${consultation.description}"></td>
                 <td th:text="${consultation.prescription}"></td>
+                <td th:text="${consultation.allergies}"></td>
+                <td th:text="${consultation.currentTreatments}"></td>
+                <td th:text="${consultation.medicalHistory}"></td>
             </tr>
             </tbody>
         </table>
@@ -142,20 +148,29 @@
         <div class="add-consultation-form" id="addConsultationForm">
             <h5>Add New Consultation</h5>
             <form th:action="@{/patient/{id}/consultation(id=${patient.id})}" method="post">
-                <!--<div class="mb-3">
-                    <label for="date" class="form-label">Date:</label>
-                    <input class="form-control" type="date" id="date" name="date" required>
-                </div> -->
                 <div class="mb-3">
                     <label for="description" class="form-label">Description:</label>
-                    <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
+                    <textarea class="form-control" id="description" name="description" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="prescription" class="form-label">Prescription:</label>
-                    <textarea class="form-control" id="prescription" name="prescription" rows="3" required></textarea>
+                    <textarea class="form-control" id="prescription" name="prescription" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="allergies" class="form-label">Allergies:</label>
+                    <textarea class="form-control" id="allergies" name="allergies" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="currentTreatments" class="form-label">Current Treatments:</label>
+                    <textarea class="form-control" id="currentTreatments" name="currentTreatments" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="medicalHistory" class="form-label">Medical History:</label>
+                    <textarea class="form-control" id="medicalHistory" name="medicalHistory" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Save Consultation</button>
             </form>
+
         </div>
     </div>
 </div>
