--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -122,8 +122,9 @@
 <!--                    <a class="nav-link" th:href="@{/index}">Home</a>-->
 <!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/appointment}">Appointments</a>
+                    <a class="nav-link" th:href="@{/appointments/doctor}">Appointments</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/AboutUs}">About Us</a>
                 </li>
