--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -65,19 +65,19 @@
 
 
 
-                <div class="form-group">
-                    <label>Role</label><br>
-                    <!-- Bouton radio pour le rôle Doctor -->
-                    <input type="radio" id="roleDoctor" name="role" th:field="*{role}" value="ROLE_DOCTOR" required />
-                    <label for="roleDoctor">Doctor</label>
-                    <input type="radio" id="roleUser" name="role" th:field="*{role}" value="ROLE_USER" required />
-                    <label for="roleUser">User</label>
-                    <!-- Bouton radio pour le rôle Pharmacy -->
-                    <input type="radio" id="rolePharmacy" name="role" th:field="*{role}" value="ROLE_PHARMACY" />
-                    <label for="rolePharmacy">Pharmacy</label>
+<!--                <div class="form-group">-->
+<!--                    <label>Role</label><br>-->
+<!--                    &lt;!&ndash; Bouton radio pour le rôle Doctor &ndash;&gt;-->
+<!--                    <input type="radio" id="roleDoctor" name="role" th:field="*{role}" value="ROLE_DOCTOR" required />-->
+<!--                    <label for="roleDoctor">Doctor</label>-->
+<!--                    <input type="radio" id="roleUser" name="role" th:field="*{role}" value="ROLE_USER" required />-->
+<!--                    <label for="roleUser">User</label>-->
+<!--                    &lt;!&ndash; Bouton radio pour le rôle Pharmacy &ndash;&gt;-->
+<!--                    <input type="radio" id="rolePharmacy" name="role" th:field="*{role}" value="ROLE_PHARMACY" />-->
+<!--                    <label for="rolePharmacy">Pharmacy</label>-->
 
-                    <!-- Vous pouvez ajouter d'autres rôles si nécessaire -->
-                </div>
+<!--                    &lt;!&ndash; Vous pouvez ajouter d'autres rôles si nécessaire &ndash;&gt;-->
+<!--                </div>-->
 
 
 
